# Realtime_business

./: project.md  rout.md
backend/: .gitignore  README.md  main.py  render.yaml  requirements.txt
backend/api/: deps.py  deps_api_key.py
backend/api/routes/: alerts.py  api_key.py  auth.py  dashboard.py  logs.py
backend/core/: config.py  security.py
backend/db/: all_models.py  session.py
backend/kafka/: producer.py  worker.py
backend/models/: alert.py  api_key.py  log.py  user.py
backend/schemas/: alert.py  api_key.py  auth.py  log.py  stats.py
backend/services/: anomaly.py
backend/websocket/: manager.py
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts  normalize.ts  stores.ts
frontend/src/lib/components/: AlertItem.svelte  AlertsSkeleton.svelte  AuthCard.svelte  DashboardLayout.svelte  DashboardSkeleton.svelte  LogTable.svelte  LogsSkeleton.svelte  Navbar.svelte  ProtectedPage.svelte  RiskGauge.svelte  Sidebar.svelte  StatCard.svelte
frontend/src/lib/components/charts/: BarChart.svelte  DoughnutChart.svelte  LineChart.svelte
frontend/src/lib/components/ui/: Badge.svelte  Button.svelte  Card.svelte  Input.svelte  Skeleton.svelte  Table.svelte
frontend/src/lib/pages/: Alerts.svelte  ApiKeys.svelte  Dashboard.svelte  Docs.svelte  Landing.svelte  Login.svelte  Logs.svelte  NotFound.svelte  Register.svelte
securelog_sdk_package/: README.md  pyproject.toml
securelog_sdk_package/securelog_sdk/: __init__.py  instrument.py  middleware.py
