[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securelog-sdk"
version = "0.1.0"
description = "Automatic security monitoring for FastAPI apps"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25",
    "starlette>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["securelog_sdk*"]